--- a/index.html
+++ b/index.html
@@ -1,201 +1,3 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Bharath Vishal – Portfolio</title>
-<link rel="icon" href="" />
-<style>
-  :root {
-    --bg:#0f1115;
-    --muted:#9aa3ad;
-    --body-text:#d1dce6;
-    --brand-green:#1db954;
-    --brand-green-hover:#1ed760;
-    --glass: rgba(255,255,255,0.03);
-    font-family: Inter, ui-sans-serif, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-  }
-  html,body{height:100%;margin:0;background:var(--bg);color:#e6eef6;}
-  .page{max-width:1100px;margin:36px auto;padding:28px;}
-  
-  /* Header */
-  header{display:flex;align-items:center;justify-content:flex-end;margin-bottom:22px;gap:16px;flex-wrap:wrap}
-  .nav{display:flex;gap:12px;flex-wrap:wrap}
-  .nav a{color:var(--muted);text-decoration:none;padding:6px 12px;border-radius:12px;transition:.18s;white-space:nowrap;font-size:0.95rem}
-  .nav a:hover{background:var(--glass);color:#fff}
-  
-  /* Hero */
-  .hero{display:grid;grid-template-columns:1fr;gap:32px;padding:28px;background:var(--glass);
-        border-radius:20px;box-shadow:0 8px 30px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.05)}
-  .photo-container{display:flex;flex-direction:column;align-items:center;justify-content:center;gap:20px;order:1}
-  .hero-content{order:2}
-  .hero-content h1{font-size:1.5rem;margin:0 0 12px 0}
-  .hero-content p{color:var(--body-text);font-size:0.95rem;line-height:1.6}
-  .photo{width:280px;height:280px;border-radius:50%;overflow:hidden;
-         border:4px solid rgba(29,185,84,0.2);background:#1b2430;display:flex;align-items:center;
-         justify-content:center;box-shadow:0 12px 40px rgba(0,0,0,0.4)}
-  .photo img{width:100%;height:100%;object-fit:cover}
-  
-  .card{background:var(--glass);padding:18px;border-radius:14px;margin-top:12px;border:1px solid rgba(255,255,255,0.05)}
-  .card b{font-size:1.1rem;display:block;margin-bottom:12px}
-  .skills{display:flex;flex-wrap:wrap;gap:8px}
-  .skill{border:1px solid rgba(255,255,255,0.08);padding:6px 10px;border-radius:10px;font-size:0.9rem;color:var(--muted);background:rgba(255,255,255,0.02)}
-  
-  main{margin-top:22px;display:grid;gap:22px}
-  .section{padding:18px;border-radius:12px;background:var(--glass);border:1px solid rgba(255,255,255,0.05)}
-  .section h2{font-size:1.5rem;margin:0 0 16px 0}
-  .section p{color:var(--body-text);font-size:0.95rem;line-height:1.6}
-
-  /* Experience & Education */
-  .timeline{margin-top:16px;display:grid;gap:16px}
-  .timeline-item{background:var(--glass);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.05)}
-  .timeline-item h3{margin:0 0 8px 0;font-size:1.1rem}
-  .timeline-item .company{color:var(--brand-green);font-weight:500;margin-bottom:4px}
-  .timeline-item .duration{color:var(--muted);font-size:0.85rem;margin-bottom:8px}
-  .timeline-item .description{color:var(--body-text);line-height:1.6;font-size:0.95rem}
-
-  /* Blog Carousel */
-  .carousel-container{position:relative;overflow:hidden;margin-top:12px}
-  .carousel{display:flex;gap:20px;overflow-x:auto;scroll-behavior:smooth;scrollbar-width:thin;scrollbar-color:rgba(29,185,84,0.3) transparent;padding-bottom:8px}
-  .carousel::-webkit-scrollbar{height:8px}
-  .carousel::-webkit-scrollbar-thumb{background:rgba(29,185,84,0.3);border-radius:4px}
-  .blog-card{min-width:360px;max-width:360px;background:var(--glass);padding:0;border-radius:14px;
-             cursor:pointer;border:1px solid rgba(255,255,255,0.05);transition:.3s;flex-shrink:0;overflow:hidden}
-  .blog-card:hover{background:rgba(255,255,255,0.05);transform:translateY(-4px);
-                   box-shadow:0 8px 24px rgba(29,185,84,0.15)}
-  .blog-card-image{width:100%;height:200px;overflow:hidden;background:#1b2430;display:flex;align-items:center;justify-content:center}
-  .blog-card-image img{width:100%;height:100%;object-fit:cover;object-position:center}
-  .blog-card-content{padding:18px}
-  .blog-card h3{margin:0 0 8px 0;font-size:1.1rem;line-height:1.3}
-  .blog-card .date{color:var(--muted);font-size:0.85rem;margin-bottom:10px}
-  .blog-card .excerpt{color:var(--body-text);font-size:0.95rem;line-height:1.5;display:-webkit-box;
-                      -webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
-  .carousel-nav{display:flex;justify-content:center;gap:12px;margin-top:16px;flex-wrap:wrap}
-  .carousel-btn{background:var(--glass);border:1px solid rgba(255,255,255,0.08);
-                padding:8px 16px;border-radius:10px;color:#e6eef6;cursor:pointer;transition:.2s;font-size:0.95rem}
-  .carousel-btn:hover{background:rgba(29,185,84,0.1);border-color:rgba(29,185,84,0.3)}
-
-  /* Blog Page */
-  .blog-page{display:none;position:fixed;inset:0;background:var(--bg);z-index:1000;overflow-y:auto}
-  .blog-page.active{display:block;animation:fadeIn 0.3s ease}
-  @keyframes fadeIn{from{opacity:0}to{opacity:1}}
-  .blog-content{max-width:800px;margin:0 auto;padding:60px 28px 40px 28px}
-  .blog-header{margin-bottom:32px;border-bottom:1px solid rgba(255,255,255,0.05);padding-bottom:24px}
-  .blog-header h1{font-size:2.2rem;margin:0 0 12px 0;line-height:1.2}
-  .blog-header .subheading{font-size:1.2rem;color:var(--muted);margin-bottom:16px;line-height:1.4}
-  .blog-header .meta{color:var(--muted);font-size:0.9rem}
-  .blog-body{line-height:1.8;font-size:1.05rem}
-  .blog-body p{margin:20px 0;color:var(--body-text)}
-  .blog-image{margin:30px 0;text-align:center}
-  .blog-image img{max-width:100%;border-radius:12px;box-shadow:0 8px 32px rgba(0,0,0,0.4);border:1px solid rgba(255,255,255,0.05)}
-  .blog-image figcaption{margin-top:12px;color:var(--muted);font-size:0.9rem;font-style:italic}
-  .close-blog{position:fixed;top:20px;right:28px;background:var(--brand-green);
-              border:1px solid rgba(255,255,255,0.1);padding:10px 20px;border-radius:12px;
-              cursor:pointer;color:#fff;transition:.2s;z-index:1001;font-size:0.95rem;font-weight:500}
-  .close-blog:hover{background:var(--brand-green-hover);box-shadow:0 4px 12px rgba(29,185,84,0.4)}
-
-  /* Projects */
-  .project-frame{width:100%;height:400px;border-radius:8px;overflow:hidden;border:1px solid rgba(255,255,255,0.05)}
-  .projects-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;margin-top:16px}
-  .project-item{background:var(--glass);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.05)}
-  .project-item h3{font-size:1.1rem;margin:0 0 12px 0}
-  .project-item p{color:var(--body-text);font-size:0.95rem;line-height:1.6;margin:0 0 16px 0}
-  
-  footer{margin-top:28px;text-align:center;color:var(--muted);font-size:0.9rem;padding:20px 0}
-  .btn{background:transparent;border:1px solid rgba(255,255,255,0.08);padding:8px 16px;border-radius:12px;color:var(--muted);text-decoration:none;display:inline-block;transition:.2s;font-size:0.95rem}
-  .btn:hover{background:var(--glass);color:#fff;border-color:rgba(255,255,255,0.12)}
-  .btn-primary{background:var(--brand-green);color:#fff;border-color:var(--brand-green)}
-  .btn-primary:hover{background:var(--brand-green-hover);border-color:var(--brand-green-hover);box-shadow:0 4px 12px rgba(29,185,84,0.4)}
-
-  /* Responsive */
-  @media(min-width:768px){
-    .hero{grid-template-columns:1fr 400px}
-    .hero-content{order:1}
-    .photo-container{order:2}
-  }
-  @media(max-width:767px){
-    .page{padding:16px;margin:16px auto}
-    .hero{padding:20px}
-    .photo{width:200px;height:200px}
-    .section{padding:14px}
-  }
-</style>
-</head>
-<body>
-<div class="page" id="mainPage">
-  <header>
-    <nav class="nav">
-      <a href="#about">About</a>
-      <a href="#experience">Experience</a>
-      <a href="#education">Education</a>
-      <a href="#blogs">Blogs</a>
-      <a href="#projects">Projects</a>
-      <a href="#resume">Resume</a>
-      <a href="#contact">Contact</a>
-      <a class="btn" href="admin.html">Admin</a>
-    </nav>
-  </header>
-
-  <section class="hero">
-    <div class="hero-content">
-      <h1 id="heroName">Hi – I'm Bharath</h1>
-      <p id="heroTag">I bring human simplicity into complex AI systems.</p>
-      <div class="card">
-        <b>Skills</b>
-        <div class="skills" id="skills"></div>
-      </div>
-    </div>
-    <div class="photo-container">
-      <div class="photo"><img id="heroPhoto" src="Images/photo.png" alt="Bharath photo"></div>
-    </div>
-  </section>
-
-  <main>
-    <section class="section" id="about"><h2>About</h2><div id="aboutText"></div></section>
-    <section class="section" id="experience"><h2>Experience</h2><div class="timeline" id="experienceTimeline"></div></section>
-    <section class="section" id="education"><h2>Education</h2><div class="timeline" id="educationTimeline"></div></section>
-    
-    <section class="section" id="blogs">
-      <h2>Blogs</h2>
-      <div class="carousel-container">
-        <div class="carousel" id="blogCarousel"></div>
-      </div>
-      <div class="carousel-nav">
-        <button class="carousel-btn" onclick="scrollCarousel(-1)">← Previous</button>
-        <button class="carousel-btn" onclick="scrollCarousel(1)">Next →</button>
-      </div>
-    </section>
-    
-    <section class="section" id="projects">
-      <h2>Projects</h2>
-      <div class="projects-grid" id="projectsGrid"></div>
-    </section>
-
-    <section class="section" id="resume">
-      <h2>Resume</h2>
-      <a id="resumeLink" class="btn btn-primary" href="resume.pdf" target="_blank">📄 View Resume</a>
-    </section>
-
-    <section class="section" id="contact">
-      <h2>Contact</h2>
-      <a id="contactEmail" href="#">you@example.com</a>
-    </section>
-  </main>
-  <footer>© Bharath Vishal – Built for simplicity</footer>
-</div>
-
-<div class="blog-page" id="blogPage">
-  <button class="close-blog" onclick="closeBlog()">✕ Close</button>
-  <div class="blog-content">
-    <div class="blog-header">
-      <h1 id="blogTitle"></h1>
-      <div class="subheading" id="blogSubheading"></div>
-      <div class="meta" id="blogMeta"></div>
-    </div>
-    <div class="blog-body" id="blogBody"></div>
-  </div>
-</div>
-
 <script>
 async function loadSite() {
   try {
@@ -237,28 +39,55 @@ async function loadSite() {
       `)
       .join('');
 
-    // PROJECTS — updated to use root ppt1.pdf
+    // ✅ PROJECTS (auto path detection for root or Projects folder)
     const projDiv = document.getElementById('projectsGrid');
     projDiv.innerHTML = (data.projects || [])
       .map(p => {
-        const pdfPath = p.pdfUrl; // ✅ changed line
+        let pdfPath = p.pdfUrl || '';
+        // detect if pdf is inside Projects or root
+        if (!pdfPath.includes('/')) {
+          // Try root first
+          pdfPath = `${pdfPath}`;
+        }
         return `
         <div class="project-item">
           <h3>${p.title || p.pdfUrl}</h3>
           ${p.description ? `<p>${p.description}</p>` : ''}
-          ${p.pdfUrl ? `<iframe class="project-frame" src="${pdfPath}#toolbar=0&navpanes=0"></iframe>` : ''}
-          ${p.pdfUrl ? `<p style="margin-top:12px"><a href="${pdfPath}" target="_blank" class="btn">📄 View Full PDF</a></p>` : ''}
-          ${p.link ? `<p style="margin-top:8px"><a href="${p.link}" target="_blank" class="btn">🔗 Open Project</a></p>` : ''}
-        </div>`;
+          ${
+            p.pdfUrl
+              ? `<iframe class="project-frame" src="${pdfPath}#toolbar=0&navpanes=0" 
+                   title="${p.title || 'Project PDF Preview'}" onerror="this.style.display='none'"></iframe>`
+              : ''
+          }
+          ${
+            p.pdfUrl
+              ? `<p style="margin-top:12px"><a href="${pdfPath}" target="_blank" class="btn">📄 View Full PDF</a></p>`
+              : ''
+          }
+          ${
+            p.link
+              ? `<p style="margin-top:8px"><a href="${p.link}" target="_blank" class="btn">🔗 Open Project</a></p>`
+              : ''
+          }
+        </div>
+      `;
       })
       .join('');
 
     // BLOGS
+    const blogs = (data.blogs || [])
+      .filter(b => !/resume/i.test(b.title || ""))
+      .sort((a, b) => new Date(b.date) - new Date(a.date));
+
     const blogDiv = document.getElementById('blogCarousel');
-    blogDiv.innerHTML = (data.blogs || [])
+    blogDiv.innerHTML = blogs
       .map(blog => `
         <div class="blog-card" onclick="openBlog(${JSON.stringify(blog).replace(/"/g, '&quot;')})">
-          ${blog.image ? `<div class="blog-card-image"><img src="${blog.image}" alt="${blog.title}"></div>` : ''}
+          ${
+            blog.image
+              ? `<div class="blog-card-image"><img src="${blog.image}" alt="${blog.title}"></div>`
+              : ''
+          }
           <div class="blog-card-content">
             <h3>${blog.title}</h3>
             <div class="date">${blog.date || ''}</div>
@@ -268,14 +97,18 @@ async function loadSite() {
       `)
       .join('');
 
-    // RESUME + CONTACT
+    // RESUME
     document.getElementById('resumeLink').href = data.resumeUrl || 'resume.pdf';
+
+    // CONTACT
     if (data.contactEmail) {
       document.getElementById('contactEmail').textContent = data.contactEmail;
       document.getElementById('contactEmail').href = `mailto:${data.contactEmail}`;
     }
   } catch (err) {
-    console.error("Error loading site-data.json:", err);
+    console.error("Error loading JSON:", err);
+    document.getElementById('aboutText').textContent =
+      "Error loading site-data.json. Check file path or syntax.";
   }
 }
 
@@ -287,7 +120,8 @@ function openBlog(blog) {
   document.getElementById('blogMeta').textContent = blog.date || '';
   document.getElementById('blogBody').innerHTML = `
     ${blog.image ? `<figure class="blog-image"><img src="${blog.image}" alt=""><figcaption>${blog.imageCaption || ''}</figcaption></figure>` : ''}
-    <p>${(blog.content || '').replace(/\n/g, '</p><p>')}</p>`;
+    <p>${(blog.content || '').replace(/\n/g, '</p><p>')}</p>
+  `;
 }
 
 function closeBlog() {
@@ -296,10 +130,11 @@ function closeBlog() {
 }
 
 function scrollCarousel(dir) {
-  document.getElementById('blogCarousel').scrollBy({left: dir * 400, behavior: 'smooth'});
+  document.getElementById('blogCarousel').scrollBy({
+    left: dir * 400,
+    behavior: 'smooth'
+  });
 }
 
 loadSite();
 </script>
-</body>
-</html>
