--- a/index.html
+++ b/index.html
@@ -1,140 +1,176 @@
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Bharath Vishal – Portfolio</title>
+<link rel="icon" href="Images/photo.png" />
+<style>
+  :root {
+    --bg:#0f1115;
+    --muted:#9aa3ad;
+    --body-text:#d1dce6;
+    --brand-green:#1db954;
+    --brand-green-hover:#1ed760;
+    --glass: rgba(255,255,255,0.03);
+    font-family: Inter, ui-sans-serif, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+  }
+  html,body{height:100%;margin:0;background:var(--bg);color:#e6eef6;}
+  .page{max-width:1100px;margin:36px auto;padding:28px;}
+  header{display:flex;align-items:center;justify-content:flex-end;margin-bottom:22px;gap:16px;flex-wrap:wrap}
+  .nav{display:flex;gap:12px;flex-wrap:wrap}
+  .nav a{color:var(--muted);text-decoration:none;padding:6px 12px;border-radius:12px;transition:.18s;white-space:nowrap;font-size:0.95rem}
+  .nav a:hover{background:var(--glass);color:#fff}
+  .hero{display:grid;grid-template-columns:1fr;gap:32px;padding:28px;background:var(--glass);
+        border-radius:20px;box-shadow:0 8px 30px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.05)}
+  .photo-container{display:flex;flex-direction:column;align-items:center;justify-content:center;gap:20px;order:1}
+  .hero-content{order:2}
+  .hero-content h1{font-size:1.5rem;margin:0 0 12px 0}
+  .hero-content p{color:var(--body-text);font-size:0.95rem;line-height:1.6}
+  .photo{width:280px;height:280px;border-radius:50%;overflow:hidden;
+         border:4px solid rgba(29,185,84,0.2);background:#1b2430;display:flex;align-items:center;
+         justify-content:center;box-shadow:0 12px 40px rgba(0,0,0,0.4)}
+  .photo img{width:100%;height:100%;object-fit:cover}
+  .card{background:var(--glass);padding:18px;border-radius:14px;margin-top:12px;border:1px solid rgba(255,255,255,0.05)}
+  .card b{font-size:1.1rem;display:block;margin-bottom:12px}
+  .skills{display:flex;flex-wrap:wrap;gap:8px}
+  .skill{border:1px solid rgba(255,255,255,0.08);padding:6px 10px;border-radius:10px;font-size:0.9rem;color:var(--muted);background:rgba(255,255,255,0.02)}
+  main{margin-top:22px;display:grid;gap:22px}
+  .section{padding:18px;border-radius:12px;background:var(--glass);border:1px solid rgba(255,255,255,0.05)}
+  .section h2{font-size:1.5rem;margin:0 0 16px 0}
+  .section p{color:var(--body-text);font-size:0.95rem;line-height:1.6}
+  .timeline{margin-top:16px;display:grid;gap:16px}
+  .timeline-item{background:var(--glass);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.05)}
+  .timeline-item h3{margin:0 0 8px 0;font-size:1.1rem}
+  .timeline-item .company{color:var(--brand-green);font-weight:500;margin-bottom:4px}
+  .timeline-item .duration{color:var(--muted);font-size:0.85rem;margin-bottom:8px}
+  .timeline-item .description{color:var(--body-text);line-height:1.6;font-size:0.95rem}
+  .carousel-container{position:relative;overflow:hidden;margin-top:12px}
+  .carousel{display:flex;gap:20px;overflow-x:auto;scroll-behavior:smooth;scrollbar-width:thin;scrollbar-color:rgba(29,185,84,0.3) transparent;padding-bottom:8px}
+  .carousel::-webkit-scrollbar{height:8px}
+  .carousel::-webkit-scrollbar-thumb{background:rgba(29,185,84,0.3);border-radius:4px}
+  .blog-card{min-width:360px;max-width:360px;background:var(--glass);padding:0;border-radius:14px;
+             cursor:pointer;border:1px solid rgba(255,255,255,0.05);transition:.3s;flex-shrink:0;overflow:hidden}
+  .blog-card:hover{background:rgba(255,255,255,0.05);transform:translateY(-4px);
+                   box-shadow:0 8px 24px rgba(29,185,84,0.15)}
+  .blog-card-image{width:100%;height:200px;overflow:hidden;background:#1b2430;display:flex;align-items:center;justify-content:center}
+  .blog-card-image img{width:100%;height:100%;object-fit:cover;object-position:center}
+  .blog-card-content{padding:18px}
+  .blog-card h3{margin:0 0 8px 0;font-size:1.1rem;line-height:1.3}
+  .blog-card .date{color:var(--muted);font-size:0.85rem;margin-bottom:10px}
+  .blog-card .excerpt{color:var(--body-text);font-size:0.95rem;line-height:1.5;display:-webkit-box;
+                      -webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
+  .carousel-nav{display:flex;justify-content:center;gap:12px;margin-top:16px;flex-wrap:wrap}
+  .carousel-btn{background:var(--glass);border:1px solid rgba(255,255,255,0.08);
+                padding:8px 16px;border-radius:10px;color:#e6eef6;cursor:pointer;transition:.2s;font-size:0.95rem}
+  .carousel-btn:hover{background:rgba(29,185,84,0.1);border-color:rgba(29,185,84,0.3)}
+  .project-frame{width:100%;height:400px;border-radius:8px;overflow:hidden;border:1px solid rgba(255,255,255,0.05)}
+  .projects-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:20px;margin-top:16px}
+  .project-item{background:var(--glass);padding:18px;border-radius:12px;border:1px solid rgba(255,255,255,0.05)}
+  .project-item h3{font-size:1.1rem;margin:0 0 12px 0}
+  .project-item p{color:var(--body-text);font-size:0.95rem;line-height:1.6;margin:0 0 16px 0}
+  footer{margin-top:28px;text-align:center;color:var(--muted);font-size:0.9rem;padding:20px 0}
+  .btn{background:transparent;border:1px solid rgba(255,255,255,0.08);padding:8px 16px;border-radius:12px;color:var(--muted);text-decoration:none;display:inline-block;transition:.2s;font-size:0.95rem}
+  .btn:hover{background:var(--glass);color:#fff;border-color:rgba(255,255,255,0.12)}
+  .btn-primary{background:var(--brand-green);color:#fff;border-color:var(--brand-green)}
+  .btn-primary:hover{background:var(--brand-green-hover);border-color:var(--brand-green-hover);box-shadow:0 4px 12px rgba(29,185,84,0.4)}
+  @media(min-width:768px){
+    .hero{grid-template-columns:1fr 400px}
+    .hero-content{order:1}
+    .photo-container{order:2}
+  }
+  @media(max-width:767px){
+    .page{padding:16px;margin:16px auto}
+    .photo{width:200px;height:200px}
+  }
+</style>
+</head>
+<body>
+<div class="page" id="mainPage">
+  <header>
+    <nav class="nav">
+      <a href="#about">About</a>
+      <a href="#experience">Experience</a>
+      <a href="#education">Education</a>
+      <a href="#blogs">Blogs</a>
+      <a href="#projects">Projects</a>
+      <a href="#resume">Resume</a>
+      <a href="#contact">Contact</a>
+      <a class="btn" href="admin.html">Admin</a>
+    </nav>
+  </header>
+
+  <section class="hero">
+    <div class="hero-content">
+      <h1 id="heroName">Hi – I'm Bharath</h1>
+      <p id="heroTag">I bring human simplicity into complex AI systems.</p>
+      <div class="card">
+        <b>Skills</b>
+        <div class="skills" id="skills"></div>
+      </div>
+    </div>
+    <div class="photo-container">
+      <div class="photo"><img id="heroPhoto" src="Images/photo.png" alt="Bharath photo"></div>
+    </div>
+  </section>
+
+  <main>
+    <section class="section" id="about"><h2>About</h2><div id="aboutText"></div></section>
+    <section class="section" id="experience"><h2>Experience</h2><div class="timeline" id="experienceTimeline"></div></section>
+    <section class="section" id="education"><h2>Education</h2><div class="timeline" id="educationTimeline"></div></section>
+    <section class="section" id="blogs"><h2>Blogs</h2>
+      <div class="carousel-container"><div class="carousel" id="blogCarousel"></div></div>
+      <div class="carousel-nav"><button class="carousel-btn" onclick="scrollCarousel(-1)">← Previous</button><button class="carousel-btn" onclick="scrollCarousel(1)">Next →</button></div>
+    </section>
+    <section class="section" id="projects"><h2>Projects</h2><div class="projects-grid" id="projectsGrid"></div></section>
+    <section class="section" id="resume"><h2>Resume</h2><a id="resumeLink" class="btn btn-primary" href="resume.pdf" target="_blank">📄 View Resume</a></section>
+    <section class="section" id="contact"><h2>Contact</h2><a id="contactEmail" href="#">you@example.com</a></section>
+  </main>
+  <footer>© Bharath Vishal – Built for simplicity</footer>
+</div>
+
+<div class="blog-page" id="blogPage">
+  <button class="close-blog" onclick="closeBlog()">✕ Close</button>
+  <div class="blog-content">
+    <div class="blog-header"><h1 id="blogTitle"></h1><div class="subheading" id="blogSubheading"></div><div class="meta" id="blogMeta"></div></div>
+    <div class="blog-body" id="blogBody"></div>
+  </div>
+</div>
+
 <script>
 async function loadSite() {
   try {
     const res = await fetch('site-data.json?v=' + Date.now());
     const data = await res.json();
-
-    // ABOUT
     document.getElementById('aboutText').textContent = data.about || '';
-
-    // SKILLS
     const skillsDiv = document.getElementById('skills');
-    skillsDiv.innerHTML = (data.skills || [])
-      .map(skill => `<span class="skill">${skill}</span>`)
-      .join('');
-
-    // EXPERIENCE
-    const expDiv = document.getElementById('experienceTimeline');
-    expDiv.innerHTML = (data.experience || [])
-      .map(exp => `
-        <div class="timeline-item">
-          <h3>${exp.title || ''}</h3>
-          <div class="company">${exp.company || ''}</div>
-          <div class="duration">${exp.duration || ''}</div>
-          ${exp.description ? `<div class="description">${exp.description}</div>` : ''}
-        </div>
-      `)
-      .join('');
-
-    // EDUCATION
-    const eduDiv = document.getElementById('educationTimeline');
-    eduDiv.innerHTML = (data.education || [])
-      .map(edu => `
-        <div class="timeline-item">
-          <h3>${edu.degree || ''}</h3>
-          <div class="company">${edu.institution || ''}</div>
-          <div class="duration">${edu.year || ''}</div>
-          ${edu.description ? `<div class="description">${edu.description}</div>` : ''}
-        </div>
-      `)
-      .join('');
-
-    // ✅ PROJECTS (auto path detection for root or Projects folder)
+    skillsDiv.innerHTML = (data.skills || []).map(skill => `<span class="skill">${skill}</span>`).join('');
+    document.getElementById('experienceTimeline').innerHTML = (data.experience || []).map(exp => `
+      <div class="timeline-item"><h3>${exp.title}</h3><div class="company">${exp.company}</div><div class="duration">${exp.duration}</div><div class="description">${exp.description}</div></div>`).join('');
+    document.getElementById('educationTimeline').innerHTML = (data.education || []).map(edu => `
+      <div class="timeline-item"><h3>${edu.degree}</h3><div class="company">${edu.institution}</div><div class="duration">${edu.year}</div><div class="description">${edu.description}</div></div>`).join('');
     const projDiv = document.getElementById('projectsGrid');
-    projDiv.innerHTML = (data.projects || [])
-      .map(p => {
-        let pdfPath = p.pdfUrl || '';
-        // detect if pdf is inside Projects or root
-        if (!pdfPath.includes('/')) {
-          // Try root first
-          pdfPath = `${pdfPath}`;
-        }
-        return `
-        <div class="project-item">
-          <h3>${p.title || p.pdfUrl}</h3>
-          ${p.description ? `<p>${p.description}</p>` : ''}
-          ${
-            p.pdfUrl
-              ? `<iframe class="project-frame" src="${pdfPath}#toolbar=0&navpanes=0" 
-                   title="${p.title || 'Project PDF Preview'}" onerror="this.style.display='none'"></iframe>`
-              : ''
-          }
-          ${
-            p.pdfUrl
-              ? `<p style="margin-top:12px"><a href="${pdfPath}" target="_blank" class="btn">📄 View Full PDF</a></p>`
-              : ''
-          }
-          ${
-            p.link
-              ? `<p style="margin-top:8px"><a href="${p.link}" target="_blank" class="btn">🔗 Open Project</a></p>`
-              : ''
-          }
-        </div>
-      `;
-      })
-      .join('');
-
-    // BLOGS
-    const blogs = (data.blogs || [])
-      .filter(b => !/resume/i.test(b.title || ""))
-      .sort((a, b) => new Date(b.date) - new Date(a.date));
-
-    const blogDiv = document.getElementById('blogCarousel');
-    blogDiv.innerHTML = blogs
-      .map(blog => `
-        <div class="blog-card" onclick="openBlog(${JSON.stringify(blog).replace(/"/g, '&quot;')})">
-          ${
-            blog.image
-              ? `<div class="blog-card-image"><img src="${blog.image}" alt="${blog.title}"></div>`
-              : ''
-          }
-          <div class="blog-card-content">
-            <h3>${blog.title}</h3>
-            <div class="date">${blog.date || ''}</div>
-            <div class="excerpt">${blog.subheading || ''}</div>
-          </div>
-        </div>
-      `)
-      .join('');
-
-    // RESUME
+    projDiv.innerHTML = (data.projects || []).map(p => {
+      const pdfPath = p.pdfUrl.includes('/') ? p.pdfUrl : `${p.pdfUrl}`;
+      return `<div class="project-item"><h3>${p.title}</h3><p>${p.description}</p>
+      <iframe class="project-frame" src="${pdfPath}#toolbar=0&navpanes=0"></iframe>
+      <p style="margin-top:12px"><a href="${pdfPath}" target="_blank" class="btn">📄 View Full PDF</a></p></div>`;
+    }).join('');
+    const blogs = (data.blogs || []).sort((a,b)=>new Date(b.date)-new Date(a.date));
+    document.getElementById('blogCarousel').innerHTML = blogs.map(blog => `
+      <div class="blog-card" onclick="openBlog(${JSON.stringify(blog).replace(/"/g,'&quot;')})">
+      <div class="blog-card-image"><img src="${blog.image}" alt="${blog.title}"></div>
+      <div class="blog-card-content"><h3>${blog.title}</h3><div class="date">${blog.date}</div><div class="excerpt">${blog.subheading}</div></div></div>`).join('');
     document.getElementById('resumeLink').href = data.resumeUrl || 'resume.pdf';
-
-    // CONTACT
-    if (data.contactEmail) {
-      document.getElementById('contactEmail').textContent = data.contactEmail;
-      document.getElementById('contactEmail').href = `mailto:${data.contactEmail}`;
-    }
-  } catch (err) {
-    console.error("Error loading JSON:", err);
-    document.getElementById('aboutText').textContent =
-      "Error loading site-data.json. Check file path or syntax.";
-  }
+    if (data.contactEmail){document.getElementById('contactEmail').textContent=data.contactEmail;document.getElementById('contactEmail').href=`mailto:${data.contactEmail}`;}
+  } catch (err) {console.error("Error loading JSON:", err);}
 }
-
-function openBlog(blog) {
-  document.getElementById('mainPage').style.display = 'none';
-  document.getElementById('blogPage').classList.add('active');
-  document.getElementById('blogTitle').textContent = blog.title || '';
-  document.getElementById('blogSubheading').textContent = blog.subheading || '';
-  document.getElementById('blogMeta').textContent = blog.date || '';
-  document.getElementById('blogBody').innerHTML = `
-    ${blog.image ? `<figure class="blog-image"><img src="${blog.image}" alt=""><figcaption>${blog.imageCaption || ''}</figcaption></figure>` : ''}
-    <p>${(blog.content || '').replace(/\n/g, '</p><p>')}</p>
-  `;
-}
-
-function closeBlog() {
-  document.getElementById('blogPage').classList.remove('active');
-  document.getElementById('mainPage').style.display = '';
-}
-
-function scrollCarousel(dir) {
-  document.getElementById('blogCarousel').scrollBy({
-    left: dir * 400,
-    behavior: 'smooth'
-  });
-}
-
+function openBlog(blog){document.getElementById('mainPage').style.display='none';document.getElementById('blogPage').classList.add('active');
+document.getElementById('blogTitle').textContent=blog.title;document.getElementById('blogSubheading').textContent=blog.subheading;document.getElementById('blogMeta').textContent=blog.date;
+document.getElementById('blogBody').innerHTML=`${blog.image?`<figure class="blog-image"><img src="${blog.image}" alt=""><figcaption>${blog.imageCaption||''}</figcaption></figure>`:''}<p>${(blog.content||'').replace(/\n/g,'</p><p>')}</p>`;}
+function closeBlog(){document.getElementById('blogPage').classList.remove('active');document.getElementById('mainPage').style.display='';}
+function scrollCarousel(dir){document.getElementById('blogCarousel').scrollBy({left:dir*400,behavior:'smooth'});}
 loadSite();
 </script>
+</body>
+</html>
