--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   .nav{display:flex;gap:12px;flex-wrap:wrap}
   .nav a{color:var(--muted);text-decoration:none;padding:6px 12px;border-radius:12px;transition:.18s;white-space:nowrap;font-size:0.95rem}
   .nav a:hover{background:var(--glass);color:#fff}
-  .hero{display:grid;grid-template-columns:1fr;gap:32px;padding:28px;background:var(--glass);
+  .hero{display:grid;grid-template-columns:1fr 400px;gap:32px;padding:28px;background:var(--glass);
         border-radius:20px;box-shadow:0 8px 30px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.05)}
-  .photo-container{display:flex;flex-direction:column;align-items:center;justify-content:center;gap:20px;order:1}
-  .hero-content{order:2}
+  .photo-container{display:flex;flex-direction:column;align-items:center;justify-content:center;gap:20px}
+  .hero-content{}
   .hero-content h1{font-size:1.5rem;margin:0 0 12px 0}
   .hero-content p{color:var(--body-text);font-size:0.95rem;line-height:1.6}
   .photo{width:280px;height:280px;border-radius:50%;overflow:hidden;
